haproxy/haproxy-passthrough/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-passthrough
  labels:
    app.kubernetes.io/part-of: haproxy-ingress-demo
    ingress.traffic.type: passthrough
