haproxy/haproxy-passthrough/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: passthrough-app-svc
  namespace: demo-testapp-passthrough
  labels:
    app: passthrough-app
spec:
  type: ClusterIP
  selector:
    app: passthrough-app
  ports:
  - name: https
    port: 8443
    targetPort: 8443
    protocol: TCP
